0.6.6/_sources/gallery/nD_vectors_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_vectors_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_nD_vectors_image.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_vectors_image.py:


nD vectors image
================

This example generates an image of vectors
Vector data is an array of shape (M, N, P, 3)
Each vector position is defined by an (x-proj, y-proj, z-proj) element
which are vector projections centered on a pixel of the MxNxP grid

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 12-38



.. image-sg:: /gallery/images/sphx_glr_nD_vectors_image_001.png
   :alt: nD vectors image
   :srcset: /gallery/images/sphx_glr_nD_vectors_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (10, 20, 40) (10, 20, 40, 3)






|

.. code-block:: Python


    import numpy as np

    import napari

    # create the viewer and window
    viewer = napari.Viewer()

    m = 10
    n = 20
    p = 40

    image = 0.2 * np.random.random((m, n, p)) + 0.5
    layer = viewer.add_image(image, contrast_limits=[0, 1], name='background')

    # sample vector image-like data
    # n x m grid of slanted lines
    # random data on the open interval (-1, 1)
    pos = np.random.uniform(-1, 1, size=(m, n, p, 3))
    print(image.shape, pos.shape)

    # add the vectors
    vect = viewer.add_vectors(pos, edge_width=0.2, length=2.5)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_vectors_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nD_vectors_image.ipynb <nD_vectors_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nD_vectors_image.py <nD_vectors_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: nD_vectors_image.zip <nD_vectors_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
